# nest-modmodule

./: .gitmodules  LICENSE  README.md  contributors.txt
modmodule/: .cpp_sources  .h_sources  CMakeLists.txt  Makefile.am  bootstrap.sh  configure.ac  da_connection.h  modmodule.cpp  modmodule.h  modulatory_connection.cpp  modulatory_connection.h
modmodule/pynest/: example.py
modmodule/sli/: .py_sources  .tags  example.py  example.sli  modmodule-init.sli
nest-2.10.0/: Makefile  config.status  libtool
nest-2.10.0/conngen/: Makefile
nest-2.10.0/doc/: Makefile  fulldoc.conf  normaldoc.conf
nest-2.10.0/examples/: Makefile
nest-2.10.0/examples/nest/: Makefile
nest-2.10.0/examples/sli/: Makefile
nest-2.10.0/extras/: Makefile  nest-config  nest_vars.sh
nest-2.10.0/extras/ConnPlotter/: Makefile
nest-2.10.0/lib/: Makefile
nest-2.10.0/lib/sli/: rcsinfo.sli
nest-2.10.0/libltdl/: Makefile  config.h  config.status  libtool
nest-2.10.0/libltdl/.libs/: libltdlc.la
nest-2.10.0/libnestutil/: Makefile  config.h  sliconfig.h
nest-2.10.0/libnestutil/.deps/: libnestutil_la-allocator.Plo  libnestutil_la-stopwatch.Plo
nest-2.10.0/libnestutil/.libs/: libnestutil.la
nest-2.10.0/librandom/: Makefile  randomtest
nest-2.10.0/librandom/.deps/: librandom_la-binomial_randomdev.Plo  librandom_la-exp_randomdev.Plo  librandom_la-gamma_randomdev.Plo  librandom_la-gsl_binomial_randomdev.Plo  librandom_la-gslrandomgen.Plo  librandom_la-normal_randomdev.Plo  (+7 more)
nest-2.10.0/models/: Makefile  libmodelsmodule_la-hh_psc_alpha_gap.lo  libmodelsmodule_la-tsodyks_connection_hom.lo
nest-2.10.0/nest/: Makefile
nest-2.10.0/nestkernel/: Makefile  libnest.la  libnest_la-growth_curve.lo  libnest_la-sp_manager.lo  libnest_la-synaptic_element.lo
nest-2.10.0/precise/: Makefile
nest-2.10.0/pynest/: Makefile  setup.py
nest-2.10.0/sli/: Makefile  sli
nest-2.10.0/testsuite/: Makefile  do_tests.sh
nest-2.10.0/topology/: Makefile  libtopologymodule.la  setup.py
(+170 files in other folders)
